--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <!-- SERVICES -->
 
-    <div class="full-size services background-light">
+    <div class="services background-light">
       <h1 class="services-heading">
         DIGITAL WEB PRODUCTS<br />FOR AMAZING CLIENTS
       </h1>
@@ -276,13 +276,109 @@
     <!-- PARTNERS -->
 
     <div class="full-size partners">
-      <h1 class="partners-heading">OUR PARTNERS</h1>
-      <div class="partners-content">
-        <img src="./images/partners/1.png" alt="partner" class="partners-img" />
-        <img src="./images/partners/2.png" alt="partner" class="partners-img" />
-        <img src="./images/partners/3.png" alt="partner" class="partners-img" />
-        <img src="./images/partners/4.png" alt="partner" class="partners-img" />
-        <img src="./images/partners/5.png" alt="partner" class="partners-img" />
+      <div class="partners-section-heading">
+        AGENSY PROUD <br />IS QUALITY OF <br />PARTNERS
+      </div>
+      <div class="partners-grid">
+        <img
+          src="./images/partners/partner1.png"
+          alt="partner"
+          class="partners-img"
+        />
+        <img
+          src="./images/partners/partner2.png"
+          alt="partner"
+          class="partners-img"
+        />
+        <img
+          src="./images/partners/partner3.png"
+          alt="partner"
+          class="partners-img"
+        />
+        <img
+          src="./images/partners/partner4.png"
+          alt="partner"
+          class="partners-img"
+        />
+        <img
+          src="./images/partners/partner5.png"
+          alt="partner"
+          class="partners-img"
+        />
+        <img
+          src="./images/partners/partner6.png"
+          alt="partner"
+          class="partners-img"
+        />
+        <img
+          src="./images/partners/partner7.png"
+          alt="partner"
+          class="partners-img"
+        />
+        <img
+          src="./images/partners/partner8.png"
+          alt="partner"
+          class="partners-img"
+        />
+        <img
+          src="./images/partners/partner9.png"
+          alt="partner"
+          class="partners-img"
+        />
+      </div>
+    </div>
+
+    <!-- CONTACT SECTION -->
+
+    <div class="contact-section background-gray">
+      <div class="contact-section-heading">
+        <p class="contact-heading-text">
+          LET'S HAVE A TALK ABOUT YOUR PROJECT.
+        </p>
+        <div class="contact-socials">
+          <img
+            src="./images/socials/facebook.png"
+            alt="facebook"
+            class="contact-socials-img"
+          />
+          <img
+            src="./images/socials/twitterx.png"
+            alt="twitter"
+            class="contact-socials-img"
+          />
+          <img
+            src="./images/socials/instagram.png"
+            alt="instagram"
+            class="contact-socials-img"
+          />
+          <img
+            src="./images/socials/linkedin.png"
+            alt="linkedin"
+            class="contact-socials-img"
+          />
+          <img
+            src="./images/socials/youtube.png"
+            alt="youtube"
+            class="contact-socials-img"
+          />
+        </div>
+      </div>
+
+      <div class="contact-section-main">
+        Need more information or want <br />
+        to get in touch?
+      </div>
+
+      <div class="contact-getintouch">Get in touch</div>
+
+      <hr class="stats-separator" />
+
+      <div class="copyright-info">
+        <p class="copy-text">© 2020 Quillnext. All rights reserved.</p>
+        <p class="developer-info">
+          Site created by
+          <span class="developer-name">Ayush Singh Kushwah</span>
+        </p>
       </div>
     </div>
   </body>
