mobile responsiveness added

--- a/index.html
+++ b/index.html
@@ -219,9 +219,9 @@
       <div class="team-section-two">
         <div class="team-section-heading">ALL ABOUT <br />THE OUR TEAM</div>
         <div class="team-section-text">
-          We work closely with your development team. markettting <br />
-          profissionals and stakeholders to design and develop UX and UI <br />
-          that makes your website. application or software a joy to use,
+          We work closely with your development team. markettting profissionals
+          and stakeholders to design and develop UX and UI that makes your
+          website. application or software a joy to use,
         </div>
       </div>
       <div class="team-members-section">
