--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 
       <!-- MAIN HOME PAGE -->
       <div class="home-content">
-        <h1 class="home-heading">STUDIO</h1>
-        <h6 class="home-subheading">
+        <h1 class="home-heading home-fade-up">STUDIO</h1>
+        <h6 class="home-subheading home-fade-up">
           We provide a free day to experience our benefits of digital world
         </h6>
       </div>
@@ -381,5 +381,8 @@
         </p>
       </div>
     </div>
+
+    <!-- JS -->
+    <script src="script.js"></script>
   </body>
 </html>
