--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <!-- HOMEPAGE -->
-    <div class="full-size flex-center flex-column homepage">
+    <section class="full-size flex-center flex-column homepage">
       <!-- LEFT NAVBAR -->
       <div class="left-nav flex-space-between flex-column">
         <img
@@ -31,8 +31,8 @@
 
       <!-- MAIN HOME PAGE -->
       <div class="home-content">
-        <h1 class="home-heading home-fade-up">STUDIO</h1>
-        <h6 class="home-subheading home-fade-up">
+        <h1 class="home-heading">STUDIO</h1>
+        <h6 class="home-subheading">
           We provide a free day to experience our benefits of digital world
         </h6>
       </div>
@@ -42,11 +42,11 @@
         <p class="home-add-text">ALL CASES</p>
         <img src="./images/icons/plus.jpg" alt="plus" class="home-add-img" />
       </div>
-    </div>
+    </section>
 
     <!-- SERVICES -->
 
-    <div class="services background-light">
+    <section class="services background-light">
       <h1 class="services-heading">
         DIGITAL WEB PRODUCTS<br />FOR AMAZING CLIENTS
       </h1>
@@ -89,10 +89,10 @@
           </p>
         </div>
       </div>
-    </div>
+    </section>
 
     <!-- IMAGE -->
-    <div class="section-wrapper background-gray">
+    <section class="section-wrapper background-gray">
       <div class="image-section">
         <div class="image-section-img"></div>
       </div>
@@ -180,13 +180,13 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
 
     <!-- TEAM SECTION -->
 
-    <div class="full-size team-section background-dark">
+    <section class="full-size team-section background-dark">
       <div class="team-section-one">
-        <div class="team-section-card">
+        <article class="team-section-card">
           <p class="team-section-card-text">
             We work closely with your development team. markettting
             profissionals and stakeholders to design and develop UX and UI that
@@ -211,10 +211,10 @@
               />
             </div>
           </div>
-        </div>
-        <div class="team-section-heading">
+        </article>
+        <h1 class="team-section-heading">
           STUDIO PROUD <br />IS QUALITY OF <br />PARTNERS
-        </div>
+        </h1>
       </div>
       <div class="team-section-two">
         <div class="team-section-heading">ALL ABOUT <br />THE OUR TEAM</div>
@@ -271,11 +271,11 @@
           <p class="team-member-role">DIGITAL PRODUCER</p>
         </div>
       </div>
-    </div>
+    </section>
 
     <!-- PARTNERS -->
 
-    <div class="full-size partners">
+    <section class="full-size partners">
       <div class="partners-section-heading">
         AGENSY PROUD <br />IS QUALITY OF <br />PARTNERS
       </div>
@@ -326,15 +326,15 @@
           class="partners-img"
         />
       </div>
-    </div>
+    </section>
 
     <!-- CONTACT SECTION -->
 
-    <div class="contact-section background-gray">
+    <section class="contact-section background-gray">
       <div class="contact-section-heading">
-        <p class="contact-heading-text">
+        <h2 class="contact-heading-text">
           LET'S HAVE A TALK ABOUT YOUR PROJECT.
-        </p>
+        </h2>
         <div class="contact-socials">
           <img
             src="./images/socials/facebook.png"
@@ -364,10 +364,10 @@
         </div>
       </div>
 
-      <div class="contact-section-main">
+      <h1 class="contact-section-main">
         Need more information or want <br />
         to get in touch?
-      </div>
+      </h1>
 
       <div class="contact-getintouch">Get in touch</div>
 
@@ -380,7 +380,7 @@
           <span class="developer-name">Ayush Singh Kushwah</span>
         </p>
       </div>
-    </div>
+    </section>
 
     <!-- JS -->
     <script src="script.js"></script>
