semantic html added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- HOMEPAGE -->
     <section class="full-size flex-center flex-column homepage">
       <!-- LEFT NAVBAR -->
-      <div class="left-nav flex-space-between flex-column">
+      <nav class="left-nav flex-space-between flex-column">
         <img
           src="./images/icons/logo.png"
           alt="logo"
@@ -27,7 +27,7 @@
           alt="audiowave"
           class="left-nav-img stats"
         />
-      </div>
+      </nav>
 
       <!-- MAIN HOME PAGE -->
       <div class="home-content">
@@ -373,13 +373,13 @@
 
       <hr class="stats-separator" />
 
-      <div class="copyright-info">
+      <footer class="copyright-info">
         <p class="copy-text">© 2024 Quillnext. All rights reserved.</p>
         <p class="developer-info">
           Site created by
           <span class="developer-name">Ayush Singh Kushwah</span>
         </p>
-      </div>
+      </footer>
     </section>
 
     <!-- JS -->
