--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 
     <section class="full-size team-section background-dark">
       <div class="team-section-one">
-        <article class="team-section-card">
+        <article class="team-section-card" id="team-section-article">
           <p class="team-section-card-text">
             We work closely with your development team. markettting
             profissionals and stakeholders to design and develop UX and UI that
@@ -218,7 +218,7 @@
       </div>
       <div class="team-section-two">
         <div class="team-section-heading">ALL ABOUT <br />THE OUR TEAM</div>
-        <div class="team-section-text">
+        <div class="team-section-text" id="team-section-text">
           We work closely with your development team. markettting profissionals
           and stakeholders to design and develop UX and UI that makes your
           website. application or software a joy to use,
@@ -284,46 +284,55 @@
           src="./images/partners/partner1.png"
           alt="partner"
           class="partners-img"
+          id="partner-img1"
         />
         <img
           src="./images/partners/partner2.png"
           alt="partner"
           class="partners-img"
+          id="partner-img2"
         />
         <img
           src="./images/partners/partner3.png"
           alt="partner"
           class="partners-img"
+          id="partner-img3"
         />
         <img
           src="./images/partners/partner4.png"
           alt="partner"
           class="partners-img"
+          id="partner-img4"
         />
         <img
           src="./images/partners/partner5.png"
           alt="partner"
           class="partners-img"
+          id="partner-img5"
         />
         <img
           src="./images/partners/partner6.png"
           alt="partner"
           class="partners-img"
+          id="partner-img6"
         />
         <img
           src="./images/partners/partner7.png"
           alt="partner"
           class="partners-img"
+          id="partner-img7"
         />
         <img
           src="./images/partners/partner8.png"
           alt="partner"
           class="partners-img"
+          id="partner-img8"
         />
         <img
           src="./images/partners/partner9.png"
           alt="partner"
           class="partners-img"
+          id="partner-img9"
         />
       </div>
     </section>
