--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </nav>
 
       <!-- MAIN HOME PAGE -->
-      <div class="home-content">
+      <div class="home-content slide-right">
         <h1 class="home-heading">STUDIO</h1>
         <h6 class="home-subheading">
           We provide a free day to experience our benefits of digital world
